# timecard

./: Cargo.toml
backend/: Cargo.toml  build.gradle  up.py
backend/entity/: Cargo.toml
backend/entity/src/entities/: user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250119_071352_create_user.rs
backend/src/: context.rs  main.rs  routes.rs
backend/src/context/: clocks.rs
backend/src/context/clocks/: v1.rs
backend/src/main/java/timeclock/prod/: ClockEventController.java  DatabaseSupport.java  ProdApplication.java
backend/src/main/java/timeclock/prod/model/: ClockEvent.java
backend/src/routes/: clocks.rs  cognito.rs  user.rs
backend/src/test/java/timeclock/prod/: ProdApplicationTests.java
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AppHeader.tsx  AuthErrorBoundary.tsx  ClockList.tsx  UserClock.tsx
frontend/src/components/modals/: CreateClock.tsx  DeleteClock.tsx  EditClock.tsx
frontend/src/components/ui/: spinner.tsx
frontend/src/lib/: api.ts  formProperties.ts  useAttributes.ts  useAuth.ts  useDateFormat.ts
frontend/src/lib/api/: clocks.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Layout.tsx
