[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }

anyhow = "1.0.95"
aws-config = "1.5.14"
aws-sdk-secretsmanager = "1.58.0"
aws-smithy-runtime-api = "1.7.3"
axum = { version = "0.8.1", features = ["macros"] }
sea-orm = { version = "1.1.1", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = { version = "2.0.11" }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "timeout"] }
url = "2.5.4"
aws-sdk-cognitoidentityprovider = "1.64.0"
tower-cookies = "0.11.0"
futures = "0.3.31"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15.0"
